statistics changed, items removed from order